docs: add and correct swagger documentation for alarms and calendars routes
